# UAAlgorithms

./: .gitmodules  readme.markdown
Java/: readme.markdown
Java/main/Math/PrimalityTest/: NaivePrimeTest.java
c++/: BFS.cpp  CMakeLists.txt  TODO  test.hpp
c++/Breadth First Search/: BFS.cpp  BFS.hpp
c++/Breadth First Search/BFS.test/: BFS.cpp
c++/Longest Common Substring/: Input.txt  LCS.cpp  LCS.hpp
c++/Longest Common Substring/LCS.test/: LCS.cpp  LCS.in  LCS.out
c++/Sweet-Tarts/:  Sweet Tarts.cpp  README.txt  Sweet-Tarts Input  Sweet-Tarts Output  Sweet-Tarts Test Data  Sweet-Tarts.cpp  readme.markdown
c++/sample/: CMakeLists.txt  readme.markdown  sample.cpp  sample.hpp  st.hpp  test.hpp
c++/sample/SweetTarts.test/: test.cpp
c++/sample/sample.test/: increment.cpp
c++/sieve/: SieveOfEratosthenes.cpp  SieveOfEratosthenes.hpp
main/DynamicProgramming/: MaximumSubarray.java
rnd/: .gitignore  build.sh  main-test.cpp  test.sh
rnd/increment/: increment.cpp  increment.h  increment.test.cpp
rnd/src/: main-test.cpp
rnd/src/bfs/: bfs.cpp  bfs.h  bfs.test.cpp
rnd/src/core/: core.cpp  core.h
rnd/src/decrement/: decrement.cpp  decrement.h  decrement.test.cpp
rnd/src/increment/: increment.test.cpp
